--- a/setup/README
+++ b/setup/README
@@ -12,7 +12,7 @@ The package can be installed manually from the compressed archive stored in this
 
 On all platforms, launch R in this directory and type:
 ```
-	install.packages("EBBC_1.0.tar.gz", source=TRUE)
+	install.packages("EBBC_1.0.tar.gz", type="source")
 ```
 Please note that you will need permissions to write in R's library folder in order to install the package.
 Alternatively, from within this directory, open a terminal and type:
